syntax = "proto3";
option java_multiple_files = true;
package io.morningcode.grpc.server;


service GreetingService {
  rpc greetBy(GreetingRequest) returns (GreetingResponse);
}

message GreetingRequest {
  string name = 1;
}

message GreetingResponse {
  string message = 1;
}
